# simple-blackjack

./: README.md  simple-blackjack.cabal
src/: Main.hs
