name:                simple-blackjack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple-blackjack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple-blackjack
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,random >= 1.2.1.1
                      ,text >= 1.2.5.0
                      ,containers >= 0.6.4.1
